jvm-dsl-core/src/main/java/com.dongjiaqiang.jvm.dsl.core/JvmDslParserParser.java
// Generated from java-escape by ANTLR 4.11.1
package com.dongjiaqiang.jvm.dsl.core;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JvmDslParserParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	public static final int
			PROGRAM = 1, ASSERT = 2, BREAK = 3, CASE = 4, CATCH = 5, CLASS = 6, CONTINUE = 7, DEFAULT = 8,
			DO = 9, ELSE = 10, FINALLY = 11, FOR = 12, IF = 13, USING = 14, PACKAGE = 15, AS = 16,
			FROM = 17, IMPORT = 18, INSTANCEOF = 19, NEW = 20, RETURN = 21, MATCH = 22, SYNCHRONIZED = 23,
			THROW = 24, THROWS = 25, TRY = 26, VOLATILE = 27, WHILE = 28, DEF = 29, FLOAT = 30,
			VOID = 31, INT = 32, LONG = 33, DOUBLE = 34, BOOL = 35, BYTE = 36, CHAR = 37, STRING = 38,
			LIST = 39, ARRAY = 40, SET = 41, MAP = 42, OPTION = 43, FUTURE = 44, ASYNC = 45, INT_LITERAL = 46,
			FLOAT_LITERAL = 47, LONG_LITERAL = 48, DOUBLE_LITERAL = 49, BOOL_LITERAL = 50,
			STRING_LITERAL = 51, CHAR_LITERAL = 52, NULL_LITERAL = 53, IDENTIFIER = 54, LPAREN = 55,
			RPAREN = 56, LBRACE = 57, RBRACE = 58, LBRACK = 59, RBRACK = 60, SEMI = 61, COMMA = 62,
			DOT = 63, ASSIGN = 64, GT = 65, LT = 66, BANG = 67, TILDE = 68, QUESTION = 69, COLON = 70,
			EQUAL = 71, LE = 72, GE = 73, NOTEQUAL = 74, AND = 75, OR = 76, ADD = 77, SUB = 78, MUL = 79,
			DIV = 80, BITAND = 81, BITOR = 82, CARET = 83, MOD = 84, ADD_ASSIGN = 85, SUB_ASSIGN = 86,
			MUL_ASSIGN = 87, DIV_ASSIGN = 88, AND_ASSIGN = 89, OR_ASSIGN = 90, XOR_ASSIGN = 91,
			MOD_ASSIGN = 92, LSHIFT_ASSIGN = 93, RSHIFT_ASSIGN = 94, URSHIFT_ASSIGN = 95,
			ARROW = 96, WS = 97, COMMENT = 98, LINE_COMMENT = 99, ESC = 100, ID_LETTER = 101;
	public static final int
			RULE_program = 0, RULE_member = 1, RULE_importDeppendency = 2, RULE_block = 3,
			RULE_blockStatements = 4, RULE_blockStatement = 5, RULE_statement = 6,
			RULE_synchronizedStatement = 7, RULE_throwReturnOrSideEffectStatement = 8,
			RULE_breakStatement = 9, RULE_continueStatement = 10, RULE_importClazzStatement = 11,
			RULE_usingPackageStatement = 12, RULE_assertStatement = 13, RULE_tryStatement = 14,
			RULE_catches = 15, RULE_catcheClause = 16, RULE_whileStatement = 17, RULE_doWhileStatement = 18,
			RULE_forStatement = 19, RULE_ifStatement = 20, RULE_expression = 21, RULE_assignment = 22,
			RULE_arrayVariable = 23, RULE_mapVariable = 24, RULE_assignOperator = 25,
			RULE_parenExpression = 26, RULE_conditionalOrExpression = 27, RULE_conditionalAndExpression = 28,
			RULE_inclusiveOrExpression = 29, RULE_exclusiveOrExpression = 30, RULE_bitAndExpression = 31,
			RULE_equalityOperation = 32, RULE_equalityExpression = 33, RULE_relationOperation = 34,
			RULE_relationExpression = 35, RULE_shiftOperation = 36, RULE_shiftExpression = 37,
			RULE_additiveOperation = 38, RULE_additiveExpression = 39, RULE_multiplicativeOperation = 40,
			RULE_multiplicativeExpression = 41, RULE_unaryExpression = 42, RULE_lambdaExpression = 43,
			RULE_caseExpression = 44, RULE_unapplyExpression = 45, RULE_type = 46,
			RULE_types = 47, RULE_clazzType = 48, RULE_varDef = 49, RULE_classDef = 50,
			RULE_callChain = 51, RULE_part = 52, RULE_funcCall = 53, RULE_funcDef = 54,
			RULE_fieldDef = 55, RULE_literalAndCallChain = 56, RULE_literal = 57,
			RULE_baseLiteral = 58, RULE_numberLiteral = 59, RULE_listLiteral = 60,
			RULE_asyncLiteral = 61, RULE_setLiteral = 62, RULE_optionalLiteral = 63,
			RULE_mapLiteral = 64, RULE_tupleLiteral = 65, RULE_classLiteral = 66,
			RULE_localVariable = 67, RULE_variable = 68, RULE_importClazz = 69, RULE_packagePath = 70,
			RULE_packageName = 71, RULE_parameters = 72, RULE_throwDef = 73, RULE_parameter = 74,
			RULE_funcName = 75;

	private static String[] makeRuleNames() {
		return new String[]{
				"program", "member", "importDeppendency", "block", "blockStatements",
				"blockStatement", "statement", "synchronizedStatement", "throwReturnOrSideEffectStatement",
				"breakStatement", "continueStatement", "importClazzStatement", "usingPackageStatement",
				"assertStatement", "tryStatement", "catches", "catcheClause", "whileStatement",
				"doWhileStatement", "forStatement", "ifStatement", "expression", "assignment",
				"arrayVariable", "mapVariable", "assignOperator", "parenExpression",
				"conditionalOrExpression", "conditionalAndExpression", "inclusiveOrExpression",
				"exclusiveOrExpression", "bitAndExpression", "equalityOperation", "equalityExpression",
				"relationOperation", "relationExpression", "shiftOperation", "shiftExpression",
				"additiveOperation", "additiveExpression", "multiplicativeOperation",
				"multiplicativeExpression", "unaryExpression", "lambdaExpression", "caseExpression",
				"unapplyExpression", "type", "types", "clazzType", "varDef", "classDef",
				"callChain", "part", "funcCall", "funcDef", "fieldDef", "literalAndCallChain",
				"literal", "baseLiteral", "numberLiteral", "listLiteral", "asyncLiteral",
				"setLiteral", "optionalLiteral", "mapLiteral", "tupleLiteral", "classLiteral",
				"localVariable", "variable", "importClazz", "packagePath", "packageName",
				"parameters", "throwDef", "parameter", "funcName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[]{
				null, "'program'", "'assert'", "'break'", "'case'", "'catch'", "'class'",
				"'continue'", "'default'", "'do'", "'else'", "'finally'", "'for'", "'if'",
				"'using'", "'package'", "'as'", "'from'", "'import'", "'instanceof'",
				"'new'", "'return'", "'match'", "'synchronized'", "'throw'", "'throws'",
				"'try'", "'volatile'", "'while'", "'def'", "'Float'", "'Void'", "'Int'",
				"'Long'", "'Double'", "'Bool'", "'Byte'", "'Char'", "'String'", "'List'",
				"'Array'", "'Set'", "'Map'", "'Option'", "'Future'", "'async'", null,
				null, null, null, null, null, null, "'null'", null, "'('", "')'", "'{'",
				"'}'", "'['", "']'", "';'", "','", "'.'", "'='", "'>'", "'<'", "'!'",
				"'~'", "'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'",
				"'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'+='", "'-='",
				"'*='", "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", "'>>>='",
				"'=>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[]{
				null, "PROGRAM", "ASSERT", "BREAK", "CASE", "CATCH", "CLASS", "CONTINUE",
				"DEFAULT", "DO", "ELSE", "FINALLY", "FOR", "IF", "USING", "PACKAGE",
				"AS", "FROM", "IMPORT", "INSTANCEOF", "NEW", "RETURN", "MATCH", "SYNCHRONIZED",
				"THROW", "THROWS", "TRY", "VOLATILE", "WHILE", "DEF", "FLOAT", "VOID",
				"INT", "LONG", "DOUBLE", "BOOL", "BYTE", "CHAR", "STRING", "LIST", "ARRAY",
				"SET", "MAP", "OPTION", "FUTURE", "ASYNC", "INT_LITERAL", "FLOAT_LITERAL",
				"LONG_LITERAL", "DOUBLE_LITERAL", "BOOL_LITERAL", "STRING_LITERAL", "CHAR_LITERAL",
				"NULL_LITERAL", "IDENTIFIER", "LPAREN", "RPAREN", "LBRACE", "RBRACE",
				"LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "ASSIGN", "GT", "LT", "BANG",
				"TILDE", "QUESTION", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", "AND",
				"OR", "ADD", "SUB", "MUL", "DIV", "BITAND", "BITOR", "CARET", "MOD",
				"ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN",
				"OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN",
			"URSHIFT_ASSIGN", "ARROW", "WS", "COMMENT", "LINE_COMMENT", "ESC", "ID_LETTER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JvmDslParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(JvmDslParserParser.PROGRAM, 0); }
		public TerminalNode LBRACE() { return getToken(JvmDslParserParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(JvmDslParserParser.RBRACE, 0); }
		public List<ImportDeppendencyContext> importDeppendency() {
			return getRuleContexts(ImportDeppendencyContext.class);
		}
		public ImportDeppendencyContext importDeppendency(int i) {
			return getRuleContext(ImportDeppendencyContext.class,i);
		}
		public List<MemberContext> member() {
			return getRuleContexts(MemberContext.class);
		}
		public MemberContext member(int i) {
			return getRuleContext(MemberContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JvmDslParserListener ) ((JvmDslParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JvmDslParserListener ) ((JvmDslParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmDslParserVisitor ) return ((JvmDslParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(PROGRAM);
			setState(153);
			match(LBRACE);
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(154);
				importDeppendency();
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 54078379497881664L) != 0) {
				{
				{
				setState(160);
				member();
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(166);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MemberContext extends ParserRuleContext {
		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class,0);
		}
		public ClassDefContext classDef() {
			return getRuleContext(ClassDefContext.class,0);
		}
		public FieldDefContext fieldDef() {
			return getRuleContext(FieldDefContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(JvmDslParserParser.SEMI, 0); }
		public MemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_member; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JvmDslParserListener ) ((JvmDslParserListener)listener).enterMember(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JvmDslParserListener ) ((JvmDslParserListener)listener).exitMember(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmDslParserVisitor ) return ((JvmDslParserVisitor<? extends T>)visitor).visitMember(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MemberContext member() throws RecognitionException {
		MemberContext _localctx = new MemberContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_member);
		try {
			setState(173);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEF:
				enterOuterAlt(_localctx, 1);
				{
				setState(168);
				funcDef();
				}
				break;
			case CLASS:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				classDef();
				}
				break;
			case VOLATILE:
			case FLOAT:
			case VOID:
			case INT:
			case LONG:
			case DOUBLE:
			case BOOL:
			case BYTE:
			case CHAR:
			case STRING:
			case LIST:
			case ARRAY:
			case SET:
			case MAP:
			case OPTION:
			case FUTURE:
			case IDENTIFIER:
			case LPAREN:
				enterOuterAlt(_localctx, 3);
				{
				setState(170);
				fieldDef();
				setState(171);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeppendencyContext extends ParserRuleContext {
		public ImportClazzStatementContext importClazzStatement() {
			return getRuleContext(ImportClazzStatementContext.class, 0);
		}

		public UsingPackageStatementContext usingPackageStatement() {
			return getRuleContext(UsingPackageStatementContext.class, 0);
		}

		public ImportDeppendencyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_importDeppendency;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof JvmDslParserListener)
				((JvmDslParserListener) listener).enterImportDeppendency(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JvmDslParserListener ) ((JvmDslParserListener)listener).exitImportDeppendency(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JvmDslParserVisitor ) return ((JvmDslParserVisitor<? extends T>)visitor).visitImportDeppendency(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeppendencyContext importDeppendency() throws RecognitionException {
		ImportDeppendencyContext _localctx = new ImportDeppendencyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeppendency);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			importClazzStatement();
				setState(176);
				usingPackageStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
